Fixed stretch rule.

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
   height: 100vh;
   height: -moz-available;
   height: -webkit-fill-available;
-  height: fill-available;
+  height: stretch;
 }
 
 html {
